# gaia-core

./: .gitmodules  DEVELOPER.md  PORTS.md  README.md  backup.sh  compose.yaml  containers.toml  setup-host.sh
.github/workflows/: ci.yml
gaia-core/: Cargo.toml  Containerfile  entrypoint.sh
gaia-core/public/: diag.js
gaia-core/src/: app.rs  assignments.rs  camera.rs  config.rs  containers.rs  db.rs  discovery.rs  hardware.rs  kv.rs  lib.rs  main.rs  proxy.rs  server_fns.rs  updates.rs
gaia-core/src/components/: device_list.rs  mdns_panel.rs  mod.rs  nav.rs  project_card.rs  toggle.rs
gaia-core/src/pages/: gmn_config.rs  home.rs  mod.rs  projects.rs  settings.rs
gaia-core/style/: main.css
gaia-gmn-config/: Containerfile  stream_server.py
host/udev/: 99-gaia-audio.rules  99-gaia-video.rules
projects/RMS/: Containerfile
projects/RMS/.github/workflows/: container.yml
projects/gaia-audio/: Cargo.toml  README.md  install.sh
projects/gaia-audio/.github/workflows/: ci.yml
projects/gaia-audio/capture/: Cargo.toml  Containerfile
projects/gaia-audio/capture/src/: capture.rs  main.rs  server.rs
projects/gaia-audio/common/: Cargo.toml
projects/gaia-audio/common/src/: audio.rs  config.rs  detection.rs  discovery.rs  lib.rs  protocol.rs
projects/gaia-audio/examples/: bats_manifest.toml  birds_manifest.toml
projects/gaia-audio/processing/: Cargo.toml  Containerfile
projects/gaia-audio/processing/src/: analysis.rs  client.rs  db.rs  download.rs  main.rs  manifest.rs  mel.rs  model.rs  reporting.rs  spectrogram.rs
projects/gaia-audio/scripts/: convert_keras_to_onnx.py  convert_tflite_to_onnx.py  download_meta_tflite.py
projects/gaia-audio/web/: Cargo.toml  Containerfile
projects/gaia-audio/web/src/: app.rs  lib.rs  main.rs  model.rs
projects/gaia-audio/web/src/components/: calendar_grid.rs  detection_card.rs  mod.rs  nav.rs  species_card.rs
projects/gaia-audio/web/src/pages/: calendar.rs  day.rs  home.rs  import.rs  mod.rs  species.rs  species_list.rs
projects/gaia-audio/web/src/server/: db.rs  import.rs  inaturalist.rs  mod.rs
projects/gaia-audio/web/style/: main.css
