[package]
name = "gaia-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
hound.workspace = true
rubato.workspace = true
mdns-sd.workspace = true
