[package]
name = "gaia-processing"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gaia-processing"
path = "src/main.rs"

[dependencies]
gaia-common = { path = "../common" }

anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
toml.workspace = true
ctrlc.workspace = true

# Inference
tract-tflite.workspace = true
tract-onnx.workspace = true

# Storage
rusqlite.workspace = true

# Spectrogram
rustfft.workspace = true
image.workspace = true
hound.workspace = true

# HTTP client
reqwest.workspace = true

# Archive & checksum (Zenodo model download)
zip.workspace = true
md5.workspace = true
